# catalogue

./: CMakeLists.txt
include/: catalogue.hpp
src/: catalogue.cpp
test/: test_catalogue.cpp  test_product.cpp
